# e-commerce_API

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  faq.md  pyproject.toml
candidate_solution/: solution.py
src/: __init__.py  app.py  auth.py  data.py  database.py  models.py  schemas.py  security.py
