[project]
name = "e-commerce-api"
version = "0.1.0"
description = ""
authors = [
    {name = "felipe.kauer@poatek.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
name = "e-commerce-api"
version = "0.1.0"
description = ""
authors = ["felipe.kauer@poatek.com"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.6,<0.116.0"
pyjwt = ">=2.10.1,<3.0.0"
pydantic = ">=2.10.5,<3.0.0"
uvicorn = ">=0.27.0,<0.28.0"
python-jose = ">=3.3.0,<4.0.0"
passlib = ">=1.7.4,<2.0.0"
python-multipart = ">=0.0.9,<0.1.0"
email-validator = ">=2.1.0,<3.0.0"
bcrypt = ">=4.1.0,<5.0.0"

[tool.poetry.group.test.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.26.0"
pytest-cov = ">=4.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
